# docs/openapi/system.json
@@ -7,9 +7,75 @@
   "tags": [
     {
       "name": "uploads"
+    },
+    {
+      "name": "AI"
     }
   ],
   "paths": {
+    "/api/v1/ai/chat": {
+      "post": {
+        "operationId": "AiRoutes_chat",
+        "summary": "Chat with AI",
+        "description": "Chat with the AI Assistant",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "The request has succeeded.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ChatResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "The server could not understand the request due to invalid syntax.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access is unauthorized.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "AI"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ChatRequest"
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/uploads/presigned-url": {
       "post": {
         "operationId": "postPresignedUrl",
@@ -74,6 +140,44 @@
   },
   "components": {
     "schemas": {
+      "ChatRequest": {
+        "type": "object",
+        "required": [
+          "message"
+        ],
+        "properties": {
+          "message": {
+            "type": "string",
+            "description": "The message from the user"
+          },
+          "sessionId": {
+            "type": "string",
+            "description": "The optional session ID for continuity"
+          }
+        }
+      },
+      "ChatResponse": {
+        "type": "object",
+        "required": [
+          "message",
+          "data",
+          "sessionId"
+        ],
+        "properties": {
+          "message": {
+            "type": "string",
+            "description": "The response message from the AI"
+          },
+          "data": {
+            "type": "string",
+            "description": "The data payload from the AI as a JSON string"
+          },
+          "sessionId": {
+            "type": "string",
+            "description": "The session ID used for this conversation"
+          }
+        }
+      },
       "ErrorResponse": {
         "type": "object",
         "required": [
